# Dragaliden-Module-1

./: README.md  main.py  pyproject.toml  requirements.txt
scripts/: train.py
