[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wind-farm-forecast"
version = "0.1.0"
description = "Modular wind farm 15-minute power forecasting pipeline"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "matplotlib",
  "seaborn",
  "statsmodels",
  "scikit-learn",
  "xgboost",
  "lightgbm",
  "hmmlearn",
  "torch",
  "joblib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
